--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
- <link rel="stylesheet" href="./Style (2).css">
+ <link rel="stylesheet" href="./style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -147,6 +147,6 @@
     <a href="">инстаграм</a>
     <a href="">ютуб</a>
 </footer>
- <script src="./main (2).js"></script>
+ <script src="./main.js"></script>
 </body>
 </html>
